# ReaDo-CVAE

./: LICENSE  README.md  pyproject.toml  test.py  walkthrough.qmd
data/: README.md  demo_results.csv
evaluation/: ccs_acp.py  metrics.py
reado_cvae/: __init__.py  _model.py  _modules.py  active_learning.py
